# Scan_service

./: CMakeLists.txt
Client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  main.cpp
Server/: CMakeLists.txt  Scan.cpp  Scan.h  ServerSocket.cpp  ServerSocket.h  main.cpp
Socket/: CMakeLists.txt  Socket.cpp  Socket.h  SocketException.h
check/: file (7th copy).js  js_ok.js  macos (5th copy)  unix (9th copy)  unix_ok (copy).pic
